@@ -1,15 +1,10 @@
 {
-  "count": 2245,
+  "count": 2261,
   "uniques": 37,
   "clones": [
     {
-      "timestamp": "2022-03-13T00:00:00Z",
-      "count": 17,
-      "uniques": 2
-    },
-    {
       "timestamp": "2022-03-14T00:00:00Z",
-      "count": 152,
+      "count": 133,
       "uniques": 2
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2022-03-27T00:00:00Z",
-      "count": 112,
+      "count": 164,
       "uniques": 6
     }
   ]
